propellor (3.0.3-2) UNRELEASED; urgency=medium

  * Update Source: and copyright year in debian/copyright.
  * Use debian/manpages and debian/docs instead of overrides in
    debian/rules.

 -- Sean Whitton <spwhitton@spwhitton.name>  Fri, 06 May 2016 20:58:29 -0700

propellor (3.0.3-1) unstable; urgency=medium

  * Package new upstream release.
  * Bump standards version to 3.9.8 (no changes required).

 -- Sean Whitton <spwhitton@spwhitton.name>  Sun, 01 May 2016 17:12:29 -0700

propellor (3.0.3) unstable; urgency=medium

  * Remove Propellor.DotDir from the propellor library, as its use of
    Paths_propellor prevents use of the module out of propellor's tree.
    This module is only needed for the wrapper program anyway, which
    handles --init.

 -- Joey Hess <id@joeyh.name>  Sun, 01 May 2016 17:51:37 -0400

propellor (3.0.2) unstable; urgency=medium

  * Added Apt.periodicUpdates.
    Thanks, Félix Sipma.
  * Apt.unattendedUpgrades: Enable mailing problem reports to root.
    Thanks, Félix Sipma.
  * Added Propellor.Property.Fstab, and moved the fstabbed property to there.
  * Attic module added for the backup system.
    Thanks, Félix Sipma.
  * Fix build with directory-1.2.6.2.

 -- Joey Hess <id@joeyh.name>  Sat, 30 Apr 2016 15:46:50 -0400

propellor (3.0.1-1) unstable; urgency=medium

  * Package new upstream release.
  * Remove obsolete debian/NEWS to minimise confusion.

 -- Sean Whitton <spwhitton@spwhitton.name>  Wed, 06 Apr 2016 07:20:20 -0700

propellor (3.0.1) unstable; urgency=medium

  * propellor --init now runs cabal sandbox init if cabal has been
    configured with require-sandbox: True.
    Thanks, Sean Whitton
  * Re-bundled concurrent-output so propellor can be deployed to Debian
    stable systems without installing it (insecurely) from hackage.

 -- Joey Hess <id@joeyh.name>  Tue, 05 Apr 2016 13:35:54 -0400

propellor (3.0.0-1) unstable; urgency=medium

  * New upstream version.